Clean up channel service & use dto
